# Doc-pipeline

./: .docpipe.yaml.example  .gitignore  README.md  pyproject.toml
docpipe/: __main__.py  cli.py  config.py  detector.py  generator.py  scanner.py  writer.py
docpipe/parsers/: __init__.py  airflow.py  base.py  dbt.py  python_parser.py
tests/: test_parsers.py  test_writer.py
tests/fixtures/airflow/: example_dag.py
tests/fixtures/dbt/: dbt_project.yml
tests/fixtures/dbt/models/: schema.yml
tests/fixtures/python/: etl_clientes.py
